--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
-        working-directory: ../../
+        working-directory: ../
       - name: Build
         run: npm run build
-        working-directory: ../../
+        working-directory: ../
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -33,4 +33,4 @@ jobs:
             --region ap-northeast-2 \
             build s3://chateat-front \
             --delete
-        working-directory: ../../
+        working-directory: ../
