--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,27 @@
 name: client
-#트리거: 여기서는 dev, feature/ci-cd 브랜치에 push되는 경우
+
+# 트리거: 여기서는 dev, feature/ci-cd 브랜치에 push되는 경우
 on:
   push:
     branches:
       - feature/ci-cd
       - dev
+
 jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout source code.
+      - name: Checkout source code
         uses: actions/checkout@v3
+      
       - name: Install dependencies
         run: npm install
         working-directory: ./
+      
       - name: Build
         run: npm run build
         working-directory: ./
+      
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -24,6 +29,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws --version
+      
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -35,3 +41,15 @@ jobs:
             dist s3://chateat-front \
             --delete
         working-directory: ./
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/client:latest .
+      
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/client:latest
