--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: client
 
-# 트리거: 여기서는 dev, feature/ci-cd 브랜치에 push되는 경우
 on:
   push:
     branches:
@@ -30,7 +29,7 @@ jobs:
         run: |
           aws --version
       
-      - name: Sync Bucket
+      - name: Sync dist folder to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -42,6 +41,16 @@ jobs:
             --delete
         working-directory: ./
       
+      - name: Upload specific assets to S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_EC2_METADATA_DISABLED: true
+        run: |
+          aws s3 cp src/assets/kakaologinbutton.png s3://chateat-front/assets/kakaologinbutton.png --region ap-northeast-2
+          aws s3 cp src/assets/logo.png s3://chateat-front/assets/logo.png --region ap-northeast-2
+        working-directory: ./
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -53,3 +62,4 @@ jobs:
       
       - name: Push Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/client:latest
+
