--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,15 @@ jobs:
             --delete
         working-directory: ./
       
-      - name: Upload specific assets to S3
+      - name: Sync assets folder to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 cp src/assets/kakaologinbutton.png s3://chateat-front/assets/kakaologinbutton.png --region ap-northeast-2
-          aws s3 cp src/assets/logo.png s3://chateat-front/assets/logo.png --region ap-northeast-2
+          aws s3 sync \
+            src/assets s3://chateat-front/assets \
+            --region ap-northeast-2
         working-directory: ./
 
       - name: Log in to Docker Hub
