--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws s3 sync \
-            src/assets s3://chateat-front/assets \
+            src/assets s3://chateat-front/src/assets \
             --region ap-northeast-2
         working-directory: ./
 
