--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,17 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      
+
       - name: Install dependencies
         run: npm install
         working-directory: ./
-      
+
       - name: Build
+        env:
+          VITE_BACK_END_URL: ${{ secrets.VITE_BACK_END_URL }}
         run: npm run build
         working-directory: ./
-      
+
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -29,7 +31,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws --version
-      
+
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,15 +43,15 @@ jobs:
             dist s3://chateat-front \
             --delete
         working-directory: ./
-      
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/client:latest .
-      
+
       - name: Push Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/client:latest
