--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,13 @@ jobs:
         run: |
           aws s3 sync \
             --region ap-northeast-2 \
-            dist s3://chateat.store \
+            dist s3://chateat-front \
             --delete
 
       - name: Sync assets folder to S3
         run: |
           aws s3 sync \
-            src/assets s3://chateat.store/src/assets \
+            src/assets s3://chateat-front/src/assets \
             --region ap-northeast-2
 
       - name: Log in to Docker Hub
